# pick_ik

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CMakePresets.json  README.md  gd_ik_kinematics_description.xml  package.xml  pick_ik_kinematics_description.xml  upstream.repos
.devcontainer/: .profile  Dockerfile  ci-entrypoint.sh  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml  docker.yaml  format.yaml  upstream-docker.yaml
Testing/: TAG
Testing/20220924-0248/: Test.xml
cmake/: FindCatch2.cmake
doc/: INSTALL.md  USAGE.md
include/gd_ik/: algorithm.hpp  fk_moveit.hpp  forward_kinematics.hpp  frame.hpp  goal.hpp  ik_gradient.hpp  math.hpp  problem.hpp  random.hpp  robot.hpp  visibility_control.h
include/pick_ik/: fk_moveit.hpp  forward_kinematics.hpp  frame.hpp  goal.hpp  ik_gradient.hpp  ik_memetic.hpp  math.hpp  pick_ik_plugin.hpp  robot.hpp
src/: fk_moveit.cpp  forward_kinematics.cpp  frame.cpp  gd_ik_parameters.yaml  gd_ik_plugin.cpp  goal.cpp  ik_gradient.cpp  ik_jogging_example.cpp  ik_memetic.cpp  math.cpp  pick_ik_parameters.yaml  pick_ik_plugin.cpp  problem.cpp  random.cpp  robot.cpp
tests/: CMakeLists.txt  algorithm_tests.cpp  goal_tests.cpp  ik_memetic_tests.cpp  ik_tests.cpp  math_tests.cpp  robot_tests.cpp  threading_test.cpp
