<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_ik</name>
  <version>1.0.0</version>
  <description>Inverse Kinematics solver for MoveIt</description>
  <author email="maybe@tylerjw.dev">Tyler Weaver</author>
  <maintainer email="maybe@tylerjw.dev">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>fmt</depend>
  <depend>generate_parameter_library</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>
  <depend>rsl</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tl_expected</depend>

  <test_depend>moveit_resources_panda_moveit_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/pick_ik_kinematics_description.xml"/>
  </export>
</package>
